--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
